added more refactors and tests